# algorithms

./: .gitignore  CMakeLists.txt
src/: comparison_operations.hpp  minmax_operations.hpp  modifying_operations.hpp  non_modifying.hpp  non_modifying_operations.hpp  set_operations.hpp  utility_concepts.hpp
test/comparison_operations/: equal_test.cpp  lexicographical_compare_test.cpp  lexicohraphical_compare_three_way_test.cpp
test/minmax_operations/: clamp_test.cpp  max_element_test.cpp  max_test.cpp  min_element_test.cpp  min_test.cpp  minmax_element_test.cpp  minmax_test.cpp
test/modifying_operations/: copy_backwards_test.cpp  copy_if_test.cpp  copy_test.cpp  fill_test.cpp  generate_test.cpp  movable_int.hpp  move_backwards_test.cpp  move_test.cpp  remove_copy_if_test.cpp  remove_copy_test.cpp  remove_if_test.cpp  remove_test.cpp  replace_copy_if_test.cpp  replace_copy_test.cpp  replace_if_test.cpp  replace_test.cpp  reverse_copy_test.cpp  reverse_test.cpp  rotate_copy_test.cpp  rotate_test.cpp  sample_test.cpp  shift_left_test.cpp  shift_right_test.cpp  shuffle_test.cpp  swap_ranges_test.cpp  transform_test.cpp  unique_copy_test.cpp  unique_test.cpp
test/non_modifying/: adjacent_find_test.cpp  count_test.cpp  ends_with_test.cpp  find_end_n_test.cpp  find_end_test.cpp  find_first_of_test.cpp  find_test.cpp  for_each_test.cpp  mismatch_test.cpp  predicate_of_test.cpp  search_n_test.cpp  search_test.cpp  starts_with_test.cpp
test/non_modifying_operations/: adjacent_find_test.cpp  count_test.cpp  find_first_of_test.cpp  find_test.cpp  for_each_test.cpp  (+2 more)
(+5 files in other folders)
